--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="es">
 	<head>
 	<meta charset="utf-8"/>
-		<title>Página web HTML 2</title>
+		<title>Página web HTML</title>
 	</head>
 	<body>
-		<h1>Mi pagina web HTML 2</h1>
+		<h1>Mi pagina web HTML</h1>
 		<ul>
 			<li><a href="index.html">Inicio</a></li>
 			<li><a href="pagina1.html">Pagina 1</a></li>
 		</ul>
-		<p> Hola mundo este es el curso de GIT 2</p>
+		<p> Hola mundo este es el curso de GIT</p>
 	</body>
 </html>
