--- a/pagina1.html
+++ b/pagina1.html
@@ -2,14 +2,14 @@
 <html lang="es">
 	<head>
 	<meta charset="utf-8"/>
-		<title>Página web HTML 3</title>
+		<title>Página web HTML</title>
 	</head>
 	<body>
-		<h1>Página 1 3</h1>
+		<h1>Página 1</h1>
 		<ul>
 			<li><a href="index.html">Inicio</a></li>
 			<li><a href="pagina1.html">Pagina 1</a></li>
 		</ul>
-		<p> Página 1 en este es el curso de GIT 3</p>
+		<p> Página 1 en este es el curso de GIT</p>
 	</body>
 </html>
