--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 	<meta charset="utf-8"/>
-		<title>Página web HTML</title>
+		<title>Página web HTML 1</title>
 	</head>
 	<body>
 		<h1>Mi pagina web HTML</h1>
