--- a/pagina1.html
+++ b/pagina1.html
@@ -11,5 +11,6 @@
 			<li><a href="pagina1.html">Pagina 1</a></li>
 		</ul>
 		<p> Página 1 en este es el curso de GIT</p>
+				<p> Hola mundo este es el curso de GIT</p>
 	</body>
 </html>
