--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 	<meta charset="utf-8"/>
-		<title>Contacto prueba</title>
+		<title>Contacto prueba subida</title>
 	</head>
 	<body>
 		<h1>Contacto</h1>
